# template-python

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: check-pr.yml  merge-build.yml
src/: __init__.py
tests/: test_example.py
