[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "A Python project template with modern tooling"
authors = ["Your Name <your.email@example.com>"]
maintainers = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["template", "python"]
homepage = "https://github.com/your-username/template-python"
repository = "https://github.com/your-username/template-python"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.dev.dependencies]
pylint = ">=3.3.7,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
ruff = ">=0.14.10,<1.0.0"
pytest = ">=9.0.2,<10.0.0"
pyright = ">=1.1.407,<2.0.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
